change image base64 to file storage
