# src/controllers/admin_produksi.controller.js
@@ -91,6 +91,16 @@ const showOrderByID = (req, res) => {
                                 }
                             ],
                         },
+                        {
+                            model: Product_Finishing,
+                            as: "product_finishings",
+                            attributes: ["product_finishing_name"],
+                        },
+                        {
+                            model: Product_Material,
+                            as: "product_materials",
+                            attributes: ["product_material_name"],
+                        }
                 ],
             },
         ],
