# src/controllers/order_detail.controller.js
@@ -51,7 +51,7 @@ const addCart = (req, res, next) => {
     const user_id = decoded.user_id;
     const user_email = decoded.user_email;
     const product_id = req.params.id;
-    const { order_total_price, order_quantity , order_note , order_price , order_design_image , order_design, order_payment_method , order_payment_status,panjang_1, panjang_2,lebar_1,lebar_2,tinggi_1,tinggi_2 , order_discount, order_last_payment_date,order_finishing_id,order_material_id,order_detail_sablon} = req.body;
+    const { order_total_price, order_quantity , order_note , order_price , order_design_image , order_design, order_payment_method , order_payment_status,panjang_1, panjang_2,lebar_1,lebar_2,tinggi_1,tinggi_2 , order_discount, order_last_payment_date,order_finishing_id,order_material_id,order_detail_sablon,order_detail_shape} = req.body;
     db.sequelize.transaction(function (t) {
         return Orders.create({
             order_user_id: user_id,
@@ -78,11 +78,12 @@ const addCart = (req, res, next) => {
                         l2: lebar_2,
                         t1: tinggi_1,
                         t2: tinggi_2,
-                        order_detail_finishing_id: order_finishing_id,
-                        order_detail_material_id: order_material_id,
+                        order_detail_finishings_id: order_finishing_id,
+                        order_detail_materials_id: order_material_id,
                         order_detail_design: order_design,
                         order_detail_design_image: order_design_image,
-                        order_detail_sablon: order_detail_sablon
+                        order_detail_sablon: order_detail_sablon,
+                        order_detail_shape: order_detail_shape
                     },{ transaction: t })
                 })
                 .then((data) => {
@@ -147,8 +148,18 @@ const findAllCart = (req, res) => {
                                 model: Product_Finishing,
                                 as: "product_finishings",
                             },
-                        ], 
+                        ],
                     },
+                    {
+                        model: Product_Finishing,
+                        as: "product_finishings",
+                        attributes: ["product_finishing_name"],
+                    },
+                    {
+                        model: Product_Material,
+                        as: "product_materials",
+                        attributes: ["product_material_name"],
+                    }
                 ],
             },
             {
@@ -260,150 +271,6 @@ const CheckoutOrder = async (req, res) => {
     });
 
 };
-//create checkout order
-// const CheckoutOrder = async (req, res) => {
-//     const token = req.headers["x-access-token"];
-//     const decoded = jwt.verify(token, process.env.JWT_SECRET);
-//     const user_id = decoded.user_id;
-//     const { delivery_detail_name,delivery_detail_ikm, delivery_detail_email, delivery_detail_contact, delivery_detail_method, delivery_detail_address, delivery_detail_district,delivery_detail_postal_code, delivery_detail_shipping_cost,delivery_detail_courier,delivery_detail_receipt,delivery_detail_estimate } = req.body;
-//     //find all order_id with user_id and order_cart_status is 1 and return order_id object
-//     const order_id = await Orders.findAll({
-//         where: {
-//             order_user_id: user_id,
-//             order_cart_status: "1",
-//         },
-//         attributes: ["order_id"],
-//     });
-//     //get order_id array from order_id object result
-//     const order_id_array = order_id.map((item) => item.order_id);
-//     //loop order_id_array and then execute transaction
-//     for (let i = 0; i < order_id_array.length; i++) {
-//         try {
-//             await db.sequelize.transaction(async function (t) {
-//                 await Orders.update(
-//                     {
-//                         order_cart_status: "0",
-//                     },
-//                     {
-//                         where: {
-//                             order_id: order_id_array[i],
-//                         },
-//                     },
-//                     { transaction: t }
-//                 );
-//                 await Delivery_Details.create({
-//                     delivery_detail_order_id: order_id_array[i],
-//                     delivery_detail_name: delivery_detail_name,
-//                     delivery_detail_ikm: delivery_detail_ikm,
-//                     delivery_detail_email: delivery_detail_email,
-//                     delivery_detail_contact: delivery_detail_contact,
-//                     delivery_detail_method: delivery_detail_method,
-//                     delivery_detail_address: delivery_detail_address,
-//                     delivery_detail_district: delivery_detail_district,
-//                     delivery_detail_postal_code: delivery_detail_postal_code,
-//                     delivery_detail_shipping_cost: delivery_detail_shipping_cost,
-//                     delivery_detail_courier: delivery_detail_courier,
-//                     delivery_detail_receipt: delivery_detail_receipt,
-//                     delivery_detail_estimate: delivery_detail_estimate,
-//                 }, { transaction: t });
-//                 await Order_Status.update(
-//                     {
-//                         order_status_admin_code: "2",
-//                         order_status_description: "Watting for Approve Admin Customer Service",
-//                     },
-//                     {
-//                         where: {
-//                             order_status_order_id: order_id_array[i],
-//                         },
-//                     },
-//                     { transaction: t }
-//                 );
-//                 await Retributions.create({
-//                     retribution_order_id: order_id_array[i],
-//                     retribution_status: "0",
-//                 }, { transaction: t });
-//             });
-//         } catch (error) {
-//             res.status(500).send({
-//                 message: error.message || "Some error occurred while creating the Order.",
-//             });
-//         }
-//     }
-//     res.status(200).send({
-//         message: "Order has been check Admin Customer Service.",
-//     });
-// };
-
-// const CartIsTrue = (req, res) => {
-//     const token = req.headers["x-access-token"];
-//     const decoded = jwt.verify(token, process.env.JWT_SECRET);
-//     const user_id = decoded.user_id;
-//     const order_id = req.params.id;
-//     Orders.update(
-//         {
-//             order_cart_status: "1",
-//         },
-//         {
-//             where: {
-//                 order_user_id: user_id,
-//                 order_id: order_id,
-//             },
-//         }
-//     )
-//         .then((num) => {
-//             if (num == 1) {
-//                 res.send({
-//                     message: "Order was updated successfully.",
-//                 });
-//             } else {
-//                 res.send({
-//                     message: `Cannot update Order with id=${user_id}. Maybe Order was not found or req.body is empty!`,
-//                 });
-//             }
-//         })
-//         .catch((err) => {
-//             res.status(500).send({
-//                 message: "Error updating Order with id=" + user_id,
-//             });
-//         });
-// };
-
-
-// const CartIsFalse = (req, res) => {
-//     const token = req.headers["x-access-token"];
-//     const decoded = jwt.verify(token, process.env.JWT_SECRET);
-//     const user_id = decoded.user_id;
-//     const order_id = req.params.id;
-//     Orders.update(
-//         {
-//             order_cart_status: "0",
-//         },
-//         {
-//             where: {
-//                 order_user_id: user_id,
-//                 order_id: order_id,
-//             },
-//         }
-//     )
-//         .then((num) => {
-//             if (num == 1) {
-//                 res.send({
-//                     message: "Order was updated successfully.",
-//                 });
-//             } else {
-//                 res.send({
-//                     message: `Cannot update Order with id=${user_id}. Maybe Order was not found or req.body is empty!`,
-//                 });
-//             }
-//         })
-//         .catch((err) => {
-//             res.status(500).send({
-//                 message: "Error updating Order with id=" + user_id,
-//             });
-//         });
-// };
-
-
 
 const removeCart = (req, res) => {
     const token = req.headers["x-access-token"];
@@ -516,6 +383,7 @@ const showTracking = (req, res) => {
                             },
                         ],
                     },
+                    
                 ],
             },
             {
@@ -589,97 +457,93 @@ const DetailOrder = (req, res) => {
     const decoded = jwt.verify(token, process.env.JWT_SECRET);
     const user_id = decoded.user_id;
     const order_id = req.params.id;
+  
     Orders.findOne({
         where: {
             order_id: order_id,
+            order_user_id: user_id,
         },
-    }).then((data) => {
-        if (data.order_user_id !== user_id) {
-            res.status(404).send({
-                message: "Order Not Found",
-            });
-        } else {
-            Orders.findOne({
-                where: {
-                    order_id: order_id,
-                },
+        attributes: {
+            exclude: ["order_user_id","order_status_id","order_created_at","order_updated_at"],
+        },
+        include: [
+            {
+                model: Order_Status,
+                as: "order_statuses",
                 attributes: {
-                    exclude: ["order_user_id","order_status_id","order_created_at","order_updated_at"],
+                    exclude: ["order_status_order_id","order_status_admin_code","order_status_created_at","order_status_updated_at"],
+                },
+            },
+            {
+                model: OrderDetails,
+                as: "order_details",
+                attributes: {
+                    exclude: ["order_detail_created_at","order_detail_updated_at"],
                 },
                 include: [
                     {
-                        model: Order_Status,
-                        as: "order_statuses",
-                        attributes: {
-                            exclude: ["order_status_order_id","order_status_admin_code","order_status_created_at","order_status_updated_at"],
-                        },
-                    },
-                    {
-                        model: OrderDetails,
-                        as: "order_details",
-                        attributes: {
-                            exclude: ["order_detail_created_at","order_detail_updated_at"],
-                        },
+                        model: Products,
+                        as: "products",
+
                         include: [
                             {
-                                model: Products,
-                                as: "products",
-
-                                include: [
-                                    {
-                                        model: Product_Finishing,
-                                        as: "product_finishings",
-                                        attributes: {
-                                            exclude: ["product_finishing_product_id","product_finishing_created_at","product_finishing_updated_at"],
-                                        },
-                                    },
-                                    {
-                                        model: Product_Material,
-                                        as: "product_materials",
-                                        attributes: {
-                                            exclude: ["product_material_product_id","product_material_created_at","product_material_updated_at"],
-                                        },
-                                    }
-                                ],
+                                model: Product_Finishing,
+                                as: "product_finishings",
+                                attributes: {
+                                    exclude: ["product_finishing_product_id","product_finishing_created_at","product_finishing_updated_at"],
+                                },
                             },
+                            {
+                                model: Product_Material,
+                                as: "product_materials",
+                                attributes: {
+                                    exclude: ["product_material_product_id","product_material_created_at","product_material_updated_at"],
+                                },
+                            }
                         ],
                     },
                     {
-                        model: Users,
-                        as: "users",
-                        attributes: {
-                            exclude: ["user_password","user_role_id","user_status","user_created_at","user_updated_at"],
-                        },
+                        model: Product_Finishing,
+                        as: "product_finishings",
+                        attributes: ["product_finishing_name"],
                     },
                     {
-                        model: Retributions,
-                        as: "retributions",
-                        attributes:["retribution_jasa_total"],
-                    },
-                    {
-                        model: Delivery_Details,
-                        as: "delivery_details",
-                        attributes: ["delivery_detail_courier"],
+                        model: Product_Material,
+                        as: "product_materials",
+                        attributes: ["product_material_name"],
                     }
-
                 ],
-            })
-                .then((data) => {
-                    if (data.length === 0) {
-                        res.status(404).send({
-                            message: "Order Not Found",
-                        });
-                    }
-                    res.send(data);
-                })
-                .catch((err) => {
-                    res.status(500).send({
-                        message: err.message || "Some error occurred while retrieving Users.",
-                    });
-                });
-        }
-    });
+            },
+            {
+                model: Users,
+                as: "users",
+                attributes: {
+                    exclude: ["user_password","user_role_id","user_status","user_created_at","user_updated_at"],
+                },
+            },
+            {
+                model: Retributions,
+                as: "retributions",
+                attributes:["retribution_jasa_total"],
+            },
+            {
+                model: Delivery_Details,
+                as: "delivery_details",
+                attributes: ["delivery_detail_courier"],
+            }
+
+        ],
+    })
+        .then((data) => {
+            res.send(data);
+        })
+        .catch((err) => {
+            res.status(500).send({
+                message: err.message || "Some error occurred while retrieving Users.",
+            });
+        });
 };
+
 
 const showPAD = (req, res) => {
     Retributions.findAll({
