# src/controllers/super_admin.controller.js
@@ -127,6 +127,16 @@ const DetailRekapPesanan = (req, res) => {
                             },
                         ],
                     },
+                    {
+                        model: Product_Finishing,
+                        as: "product_finishings",
+                        attributes: ["product_finishing_name"],
+                    },
+                    {
+                        model: Product_Material,
+                        as: "product_materials",
+                        attributes: ["product_material_name"],
+                    }
                 ],
             },
         ],
