# src/controllers/user_order.controller.js
@@ -83,6 +83,16 @@ const showStatusOrder = (req, res) => {
 
                         ],
                     },
+                    {
+                        model: Product_Finishing,
+                        as: "product_finishings",
+                        attributes: ["product_finishing_name"],
+                    },
+                    {
+                        model: Product_Material,
+                        as: "product_materials",
+                        attributes: ["product_material_name"],
+                    }
                 ],
             },
         ],
